Closed
Bug 534745
Opened 15 years ago
Closed 15 years ago
TM: bench.sh dies on TM tip OPT shell builds
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gal, Assigned: dvander)
References
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
3.46 KB,
patch
|
gal
:
review+
|
Details | Diff | Splinter Review |
host-7-158:src gal$ ./bench.sh ./Darwin_OPT.OBJ/js
t/controlflow-recursive.js:8: InternalError: too much recursion
Debug builds work fine. This is going to be fun to debug.
Reporter | ||
Comment 1•15 years ago
|
||
The first bad revision is:
changeset: 35445:538a07fdf3d2
user: David Anderson <danderson@mozilla.com>
date: Fri Dec 11 19:10:36 2009 -0800
summary: Lazily import stack and global slots (bug 515749, original patch and r=gal).
No longer blocks: 534378
![]() |
Assignee | |
Comment 2•15 years ago
|
||
the Fun to Debug scale definitely read a Not at All on this one. patch comment explains problem.
![]() |
Assignee | |
Updated•15 years ago
|
![]() |
Assignee | |
Updated•15 years ago
|
Reporter | ||
Updated•15 years ago
|
Attachment #417878 -
Flags: review?(gal) → review+
![]() |
Assignee | |
Comment 3•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 4•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•