Fixed lazy import regression where down recursion could build wrong exit typemaps (bug 534745, r=gal).